Fixed the footer so that the layout does not collapse even on a small screen

--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -345,8 +345,8 @@
   background-color: #000000;
   padding: 60px 0;
   &__contents{
+    @include center(0);
     @include displayflex(space-around);
-    margin: 0 300px;
     &__content{
       text-align: center;
       &--head{
